--- a/final-pjt-front/src/assets/styles/custom.css
+++ b/final-pjt-front/src/assets/styles/custom.css
@@ -11,9 +11,34 @@
 /* 기본 적용 */
 body {
   font-family: 'DungGeunMo', sans-serif;
+  /* background-color: #FBF6EE; */
 }
 
 h1 {
   font-family: 'DungGeunMo', sans-serif;
-  color: #FF5F00;
+  /* color: #FF5F00; */
+}
+
+.page-title {
+  font-size: 3rem; /* 글씨 크기 */
+  font-weight: 700; /* 두꺼운 글씨 */
+  color: #ffa200; /* 오렌지색 */
+  text-align: center; /* 가운데 정렬 */
+  text-transform: uppercase; /* 대문자로 변환 */
+  letter-spacing: 3px; /* 글자 사이 간격 */
+  margin: 20px 0; /* 상하 여백 */
+}
+
+.btn-primary {
+  background-color: #ffa200; /* 임의로 설정한 배경색 */
+  border-color: #ffa200; /* 임의로 설정한 테두리 색상 */
+}
+
+.btn-primary:hover {
+  background-color: #eb9501; /* hover 시 색상 */
+  border-color: #eb9501; /* hover 시 테두리 색상 */
+}
+
+.bg-memo {
+  background-color: #f9f9f9; /* hover 시 색상 */
 }
